fixed spacing in media queries

--- a/css/index.css
+++ b/css/index.css
@@ -254,7 +254,7 @@ header img {
   position: absolute;
   margin: 20% 40%;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .mainSection .banner a {
     display: flex;
     background-color: #bbe1fa;
@@ -266,7 +266,7 @@ header img {
     color: #1b262c;
     justify-content: center;
     align-items: center;
-    margin: 10% 30%;
+    margin: 15% 30%;
   }
   .mainSection .banner a:hover {
     background-color: #addbf9;
@@ -328,14 +328,24 @@ header img {
     align-content: center;
   }
 }
+@media (max-width: 1500px) {
+  .mainSection .products .links {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
 .mainSection .products .links figure {
   width: 20%;
+}
+@media (max-width: 1500px) {
+  .mainSection .products .links figure {
+    width: 40%;
+  }
 }
 @media (max-width: 1000px) {
   .mainSection .products .links figure {
     width: 80%;
     margin-bottom: 2%;
-    margin-left: 10%;
   }
 }
 .mainSection .products .links figure figcaption {
@@ -377,11 +387,11 @@ footer nav {
   flex-direction: row;
   justify-content: space-between;
   align-content: center;
-  width: 15%;
+  width: 20%;
 }
 @media (max-width: 1600px) {
   footer nav {
-    width: 20%;
+    width: 25%;
   }
 }
 @media (max-width: 1300px) {
