--- a/less/footer.less
+++ b/less/footer.less
@@ -6,7 +6,7 @@ footer {
     height: 15vh;
     nav {
         @media (max-width: 1600px) {
-            width: 20%;
+            width: 25%;
         }
         @media (max-width: 1300px) {
             width: 30%;
@@ -18,7 +18,7 @@ footer {
             width: 60%;
         }
         .flexIn(row, space-between, center);
-        width: 15%;
+        width: 20%;
         a {
             align-self: center;
             color: white;
